<resources>
    <string name="app_name">Food App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="my_restaurant_app">My Restaurant App</string>
    <string name="hello_explore_your_dream_food">Hello Explore Your Dream Food.</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="daily_meal">Daily Meal</string>
    <string name="favourite">Favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">My Cart</string>
    <string name="triple_h">Triple H</string>
    <string name="triplehcoding_gmail_com">triplehcoding@gmail.com</string>
    <string name="log_out">Log Out</string>
    <string name="search_your_food">Search your food...</string>
    <string name="_10_00_23_00">10:00 - 23:00</string>
    <string name="_5_0">5.0</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price: $</string>
    <string name="view_more">view more</string>
    <string name="make_order">Make Order</string>
    <string name="phone_number">Phone Number</string>
    <string name="my_order">My Order</string>
    <string name="shutdown_app">Shutdown App</string>
    <string name="user_info">User Info</string>
    <string name="my_info">My Info</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="danshboard">Danshboard</string>
    <string name="manage_categories">Manage Categories</string>
    <string name="manage_products">Manage Products</string>
    <string name="manage_orders">Manage Orders</string>
    <string name="manage_users">Manage Users</string>
    <string name="admin_home">Admin Home</string>

</resources>