<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_admin_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/danshboard" />
        <item
            android:id="@+id/nav_admin_category"
            android:icon="@drawable/baseline_category_24"
            android:title="@string/manage_categories" />
        <item
            android:id="@+id/nav_admin_product"
            android:icon="@drawable/outline_fastfood_24"
            android:title="@string/manage_products" />
        <item
            android:id="@+id/nav_admin_order"
            android:icon="@drawable/outline_order_approve_24"
            android:title="@string/manage_orders" />
        <item
            android:id="@+id/nav_admin_user"
            android:icon="@drawable/outline_build_circle_24"
            android:title="@string/manage_users" />
    </group>
</menu>