<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/admin_navigation"
    app:startDestination="@+id/nav_admin_home">

    <fragment
        android:id="@+id/nav_admin_home"
        android:name="com.example.foodapp.ui.admin.AdminFragment"
        android:label="@string/admin_home"
        tools:layout="@layout/fragment_admin_home" />

    <fragment
        android:id="@+id/nav_admin_category"
        android:name="com.example.foodapp.ui.admin.ManageCategoryFragment"
        android:label="@string/manage_categories"
        tools:layout="@layout/manage_categories" />

    <fragment
        android:id="@+id/nav_admin_product"
        android:name="com.example.foodapp.ui.admin.ManageProductFragment"
        android:title="@string/manage_products"
        tools:layout="@layout/manage_products" />

    <fragment
        android:id="@+id/nav_admin_order"
        android:name="com.example.foodapp.ui.admin.ManageOrdersFragment"
        android:label="@string/manage_orders"
        tools:layout="@layout/manage_orders" />

    <fragment
        android:id="@+id/nav_admin_user"
        android:name="com.example.foodapp.ui.admin.ManageUsersFragment"
        android:label="@string/manage_users"
        tools:layout="@layout/manage_users" />




</navigation>